@@ -1,3 +1,12 @@
+2001-12-20  Bradford Hovinen  <hovinen@ximian.com>
+
+	* gconf-property-editor.c (gconf_peditor_new): Fold the callback
+	back in; accept variable argument list with extra parameters
+	(gconf_peditor_new_filename): Return the property editor
+	(gconf_peditor_new_string_valist): Split this out
+	(gconf_peditor_new_string): Call _valist variant
+	(gconf_peditor_new*): Update
+
 2001-12-19  Bradford Hovinen  <hovinen@ximian.com>
 
 	* gconf-property-editor.c (gconf_peditor_new_float_range)
